...
                height: 40.0,
                child: Icon(
                  Icons.logout,
                ),
              ),
              title: const Text(
                'Sign Out',
                style: TextStyle(
                  fontSize: 16.0,
                ),
              ),
              onTap: () => showDialog<void>(
                context: context,
...
                  actions: <Widget>[
                    TextButton(
                      onPressed: () => Navigator.of(context).pop(),
                      child: const Text('Cancel'),
                    ),
                    TextButton(
                      key: const Key('yesSignOut'),
                      onPressed: () async {
                        await userProvider.signOutUser();

                        if (context.mounted) {
                          final navigator = Navigator.of(context);
                          navigator.pushNamedAndRemoveUntil(
...
